--- a/control
+++ b/control
@@ -1,7 +1,9 @@
-Package: com.unknown.hubbub
-Name: iJackOff
-Version: 0.0.0
+Package: com.codeymoore.ijackoffhq
+Name: iJackOff - hqporner
+Version: 1.2
 Architecture: iphoneos-arm
-Maintainer: Unknown
-Author: Unknown
-Section: Utilities
+Description: Ya'll need this ;)
+Depiction: https://codeymoore.github.io/depictions/?p=com.codeymoore.ijackoff
+Maintainer: Codey Moore
+Author: Codey Moore
+Section: Entertainment
